--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				</a>
 			</div> 
 		</div>
-		<main class="resumen">
+		<div class="resumen">
 			<h2>Resumen de Rendimiento</h2>
 			<div class="cuadro-resumen">
 			  <div class="cuadro">
@@ -142,7 +142,7 @@
 				<p>Envíos en curso</p>
 			  </div>
 			</div>
-		</main>
+		</div>
 <!----
 		<div class="cards">
 			<div class="card-single">
