--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Panel Administrador</title>
-	<link rel="stylesheet" href="/vista_administrador/style.css">
+	<link rel="stylesheet" href="/style.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
 </head>
 <body>
-	<header>
+	<header class="nav">
 		<div class="left">
 			<div class="menu-container">
 				<div class="menu" id="menu">
@@ -18,30 +19,32 @@
 				</div>
 			</div>
 			<div class="brand">
-
+				<img src="/imagenes/instituto-removebg-preview.png" class="logo">
 			</div>
 		</div>
 
 		<div class="right icons-header">
 			<a href="#">
-				<img src="/vista_administrador/imagenes/chat-text.svg" alt="chat">
+				<img src="/imagenes/chat-text.svg" alt="chat">
 			</a>
 			<a href="#" class="icons-header">
-				<img src="/vista_administrador/imagenes/patch-question.svg" alt="question">
+				<img src="/imagenes/patch-question.svg" alt="question">
 			</a>
 			<a href="#" class="icons-header">
-				<img src="/vista_administrador/imagenes/bell.svg" alt="notification">
+				<img src="/imagenes/bell.svg" alt="notification">
 			</a>
-
+			<a href="#" class="icons-header">
+				<img src="/imagenes/box-arrow-left.svg" alt="notification">
+			</a>
 		</div>
 	</header>
 	
 	<div class="sidebar " id="sidebar" >
 		<!--header-->
 		<div class="sidebar-header">
-			<img src="/vista_administrador/imagenes/perfil2.jpg" alt="user-img">
+			<img src="/imagenes/perfil2.jpg" alt="user-img">
 			<div class="user-data">
-				<span>Rodrigo Maita|</span>
+				<span>Rodrigo Maita |</span>
 				<span>Administrador</span>
 			</div>
 
@@ -51,14 +54,14 @@
 			<ul>
 				<li>
 					<div class="search" id="search">
-						<img src="/vista_administrador/imagenes/cash-coin.svg" alt="seach-icon">
+						<img src="/imagenes/search.svg" alt="seach-icon">
 						<input type="text" id="search-input" placeholder="Buscar">
 					</div>
 					<div class="search-background"></div>
 				</li>
 				<li>
 					<a href="#" class="selected">
-						<img src="/vista_administrador/imagenes/house.svg"  alt="">
+						<img src="/imagenes/house.svg"  alt="">
 						<span>Inicio</span>
 					</a>
 				</li>
@@ -98,12 +101,11 @@
 	</div>
 	<main class="main-content" id="main">
 		<div class="fondo">
-			<img src="https://i.pinimg.com/736x/20/3c/1f/203c1f064f06c6679d81b3c0c9f6e8d2.jpg">
+			<!--<img src="https://i.pinimg.com/736x/20/3c/1f/203c1f064f06c6679d81b3c0c9f6e8d2.jpg">-->
 			<!--<video autoplay="autoplay" loop="loop" id="video_background" preload="auto" volume="none">
   				<source src="/imagenes/1110733_Animation_Blurred_1920x1080.mp4" type="video/mp4" />
 			</video>-->
 		</div>
-		<div class="capa"></div>
 		<div class="page-header">
 			<div class="">
 				<h1>Panel de Análisis</h1>
@@ -142,259 +144,165 @@
 			  </div>
 			</div>
 		</div>
-<!----
-		<div class="cards">
-			<div class="card-single">
-				<div class="card-flex">
-					<div class="card-info">
-						<div class="card-head">
-							<span>Ventas</span>
-							<small>Número de Ventas</small>
-						</div>
-						<h2>17,663</h2>
-						<small>2% de Ventas-cambiar a grafico</small>
-					</div>
-					<div class="card-chart">
-						<span class="las la-chart-line"></span>
-					</div>
-				</div>
-			</div>
-
-			<div class="card-single">
-				<div class="card-flex">
-					<div class="card-info">
-						<div class="card-head">
-							<span>Reembolsos</span>
-							<small>Valor de las ordenes reembolsadas</small>
-						</div>
-						<h2>$14,523.11</h2>
-						<small>10% menos reembolsos -grafico</small>
-					</div>
-					<div class="card-chart">
-						<span class="las la-chart-line"></span>
-					</div>
-				</div>
-			</div>
-
-			<div class="card-single">
-				<div class="card-flex">
-					<div class="card-info">
-						<div class="card-head">
-							<span>Vistas</span>
-							<small>Número de vistas</small>
-						</div>
-						<h2>46,085</h2>
-						<small>2% menos visitantes</small>
-					</div>
-					<div class="card-chart">
-						<span class="las la-chart-line"></span>
-					</div>
-				</div>
-			</div>
+		<!-- gráfico-->
+		<div class="resumen">
+			<canvas id="myChart" width="200" height="100"></canvas>
 		</div>
-		<div class="jobs-grid">
-			<div class="analytics-card">
-				<div class="analytics-head">
-					<h3>Ganancias por ciclo</h3>
-
-					<span class="las la-ellipsis-h"></span>
-				</div>
-
-				<div class="analytics-chart">
-					<div class="chart-circle">
-						<h1>74%</h1>
-					</div>
-
-					<div class="analytics-note">
-						<small>Nota: Los reportes de ganancias generados se guardan en un historial de consulta</small>
-					</div>
-				</div>
-
-				<div class="analytics-btn">
-					<button>Consultar Historial de ganancias</button>
-				</div>
-			</div>
-
+<!-- termina gráfico-->  
 			<div class="jobs">
 				<h2>Productos mas vendidos
 					<small> 
 						<div class="header-actions">
-							<!--EXPORTAR-->
 							<a href="#">
 								<span class="exportar">Exportar</span>
 							</a>
 						</div>
-						<!--Detalles<span class="las la-arrow-right"></span>-->
 					</small>
 				</h2>
-				<table width="100%">
-					<tbody>
-						<tr>
-							<td>
-								<div class="">
-									<span class="indicator"></span>
-								</div>
-							</td>
-							<td>
-								<div class="">
-									ID:14689
-								</div>
-							</td>
-							<td>
-								<div class="">
-									Silla Gamer
-								</div>
-							</td>
-							<td>
-								<div class="">
-									VG-SL3800SE_CB
-								</div>
-							</td>
-							<td>
-								<div class="">
-									$14.337.848
-								</div>
-							</td>
-							<td>
-								<div class="">
-									<button>80 ventas</button>
-								</div>
-							</td>
-						</tr>
-
-						<tr>
-							<td>
-								<div class="">
-									<span class="indicator even"></span>
-								</div>
-							</td>
-							<td>
-								<div class="">
-									ID:16085
-								</div>
-							</td>
-							<td>
-								<div class="">
-									Monitores y pantallas
-								</div>
-							</td>
-							<td>
-								<div class="">
-									32GR93U-B
-								</div>
-							</td>
-							<td>
-								<div class="">
-									$47.887.200
-								</div>
-							</td>
-							<td>
-								<div class="">
-									<button>60 ventas</button>
-								</div>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<div class="">
-									<span class="indicator even"></span>
-								</div>
-							</td>
-							<td>
-								<div class="">
-									ID: 15989
-								</div>
-							</td>
-							<td>
-								<div class="">
-									Placas de Video
-								</div>
-							</td>
-							<td>
-								<div class="">
-									RX-78TQICKF9
-								</div>
-							</td>
-							<td>
-								<div class="">
-									$14.624.980,5
-								</div>
-							</td>
-							<td>
-								<div class="">
-									<button>65 ventas</button>
-								</div>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<div class="">
-									<span class="indicator even"></span>
-								</div>
-							</td>
-							<td>
-								<div class="">
-									ID: 16414
-								</div>
-							</td>
-							<td>
-								<div class="">
-									Periféricos
-								</div>
-							</td>
-							<td>
-								<div class="">
-									RZ03-04681900-R3U1
-								</div>
-							</td>
-							<td>
-								<div class="">
-									$5.921.000
-								</div>
-							</td>
-							<td>
-								<div class="">
-									<button>100 ventas</button>
-								</div>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<div class="">
-									<span class="indicator even"></span>
-								</div>
-							</td>
-							<td>
-								<div class="">
-									ID: 7738
-								</div>
-							</td>
-							<td>
-								<div class="">
-									Periféricos
-								</div>
-							</td>
-							<td>
-								<div class="">
-									SKU:910-005281
-								</div>
-							</td>
-							<td>
-								<div class="">
-									$149.850
-								</div>
-							</td>
-							<td>
-								<div class="">
-									<button>148 ventas</button>
-								</div>
-							</td>
-						</tr>
-					</tbody>
-				</table>
+				<div class="table-responsive-md">
+					<table class="table table-hover table-dark">
+						<thead>
+							<tr>
+							  <th scope="col">ID</th>
+							  <th scope="col">Categoría</th>
+							  <th scope="col">Marca</th>
+							  <th scope="col">Precio</th>
+							  <th scope="col">Nº Ventas</th>
+							</tr>
+						  </thead>
+						  <tbody>
+							<tr>
+							  <th scope="row">16085</th>
+							  <td>Monitores y pantallas</td>
+							  <td>32GR93U-B</td>
+							  <td>$47.887.200</td>
+							  <td>60 ventas</td>
+							</tr>
+							<tr>
+							  <th scope="row">15989</th>
+							  <td>Placas de Video</td>
+							  <td>RX-78TQICKF9</td>
+							  <td>$14.624.980,5</td>
+							  <td>65 ventas</td>
+							</tr>
+							<tr>
+							  <th scope="row">16414</th>
+							  <td>Periféricos</td>
+							  <td>RZ03-04681900-R3U1</td>
+							  <td>$5.921.000</td>
+							  <td>100 ventas</td>
+							</tr>
+							<tr>
+								<th scope="row">16085</th>
+								<td>Monitores y pantallas</td>
+								<td>32GR93U-B</td>
+								<td>$47.887.200</td>
+								<td>60 ventas</td>
+							  </tr>
+							  <tr>
+								<th scope="row">15989</th>
+								<td>Placas de Video</td>
+								<td>RX-78TQICKF9</td>
+								<td>$14.624.980,5</td>
+								<td>65 ventas</td>
+							  </tr>
+							  <tr>
+								<th scope="row">16414</th>
+								<td>Periféricos</td>
+								<td>RZ03-04681900-R3U1</td>
+								<td>$5.921.000</td>
+								<td>100 ventas</td>
+							  </tr>
+							  <tr>
+								<th scope="row">16085</th>
+								<td>Monitores y pantallas</td>
+								<td>32GR93U-B</td>
+								<td>$47.887.200</td>
+								<td>60 ventas</td>
+							  </tr>
+							  <tr>
+								<th scope="row">15989</th>
+								<td>Placas de Video</td>
+								<td>RX-78TQICKF9</td>
+								<td>$14.624.980,5</td>
+								<td>65 ventas</td>
+							  </tr>
+							  <tr>
+								<th scope="row">16414</th>
+								<td>Periféricos</td>
+								<td>RZ03-04681900-R3U1</td>
+								<td>$5.921.000</td>
+								<td>100 ventas</td>
+							  </tr>
+							  <tr>
+								<th scope="row">16085</th>
+								<td>Monitores y pantallas</td>
+								<td>32GR93U-B</td>
+								<td>$47.887.200</td>
+								<td>60 ventas</td>
+							  </tr>
+							  <tr>
+								<th scope="row">15989</th>
+								<td>Placas de Video</td>
+								<td>RX-78TQICKF9</td>
+								<td>$14.624.980,5</td>
+								<td>65 ventas</td>
+							  </tr>
+							  <tr>
+								<th scope="row">16414</th>
+								<td>Periféricos</td>
+								<td>RZ03-04681900-R3U1</td>
+								<td>$5.921.000</td>
+								<td>100 ventas</td>
+							  </tr>
+							  <tr>
+								<th scope="row">16085</th>
+								<td>Monitores y pantallas</td>
+								<td>32GR93U-B</td>
+								<td>$47.887.200</td>
+								<td>60 ventas</td>
+							  </tr>
+							  <tr>
+								<th scope="row">15989</th>
+								<td>Placas de Video</td>
+								<td>RX-78TQICKF9</td>
+								<td>$14.624.980,5</td>
+								<td>65 ventas</td>
+							  </tr>
+							  <tr>
+								<th scope="row">16414</th>
+								<td>Periféricos</td>
+								<td>RZ03-04681900-R3U1</td>
+								<td>$5.921.000</td>
+								<td>100 ventas</td>
+							  </tr>
+							  <tr>
+								<th scope="row">16085</th>
+								<td>Monitores y pantallas</td>
+								<td>32GR93U-B</td>
+								<td>$47.887.200</td>
+								<td>60 ventas</td>
+							  </tr>
+							  <tr>
+								<th scope="row">15989</th>
+								<td>Placas de Video</td>
+								<td>RX-78TQICKF9</td>
+								<td>$14.624.980,5</td>
+								<td>65 ventas</td>
+							  </tr>
+							  <tr>
+								<th scope="row">16414</th>
+								<td>Periféricos</td>
+								<td>RZ03-04681900-R3U1</td>
+								<td>$5.921.000</td>
+								<td>100 ventas</td>
+							  </tr>
+						  </tbody>
+					</table>
+				  </div>
 			</div>
 		</div>
 	</main>
-	<script src="/vista_administrador/script.js"></script>
+	<script src="/script.js"></script>
 </body>
 </html>
